[+] Weather icon works for some reason after putting src="https://openweathermap.org/img/wn/04d@4x.png" — however, it stops working when something is displayed over it/tab switched (e.g. clicking address bar of Safari covers it) [+] Changed alt text of #weather-icon to say "Icon not available: try refreshing"

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
-    sans-serif;
+  font-family: -apple-system, system-ui, "Segoe UI", Roboto, sans-serif;
   text-align: center;
 }
 body {
